--- a/codersbay.html
+++ b/codersbay.html
@@ -97,6 +97,19 @@
 
   <!-- JavaScript -->
   <script src="logic.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAo71Ymf_jSAHlTV_ZiAsWc6ofj9ZQwYhY",
+      authDomain: "codersbay-6a7ae.firebaseapp.com",
+      databaseURL: "https://codersbay-6a7ae.firebaseio.com",
+      projectId: "codersbay-6a7ae",
+      storageBucket: "codersbay-6a7ae.appspot.com",
+      messagingSenderId: "261716702762"
+    };
+    firebase.initializeApp(config);
+  </script>
 
 </body>
 
